--- a/assets/css/login/login-nome.css
+++ b/assets/css/login/login-nome.css
@@ -2,3 +2,14 @@
   display: flex;
   flex-direction: column;
 }
+.login__entrada__nome {
+  width: 18.25rem;
+  height: 2.125rem;
+  padding-left: 0.8rem;
+  border-radius: 20px;
+  font-size: 0.8rem;
+}
+.login__campo__nome {
+  font-weight: bold;
+  font-size: 0.875rem;
+}
