--- a/assets/css/login/login-senha.css
+++ b/assets/css/login/login-senha.css
@@ -2,3 +2,15 @@
   display: flex;
   flex-direction: column;
 }
+.login__entrada__senha {
+  width: 18.25rem;
+  height: 2.125rem;
+  border-radius: 20px;
+  padding-left: 0.8rem;
+  font-size: 0.8rem;
+}
+
+.login__campo__senha {
+  font-weight: bold;
+  font-size: 0.875rem;
+}
