--- a/assets/css/formulario/formulario-container.css
+++ b/assets/css/formulario/formulario-container.css
@@ -1,5 +1,38 @@
+.cadastro > h1 {
+  margin: 3.38rem 0 1.5rem 0;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+}
+
 .cadastro__container {
-    background-color: #D9D9D9;
-    width: 408px;
-    height: 483px;
+  width: 17.56rem;
+  height: 20.81rem;
+  margin: 0 auto;
+  border-radius: 1.25rem;
+  background-color: #d9d9d9;
+}
+
+form {
+  padding: 2.937rem 0.687rem 5.937rem 0.687rem;
+}
+
+form div + div {
+  margin-top: 10px;
+}
+
+.cadastro__campos {
+  display: flex;
+  flex-direction: column;
+}
+form > div > label {
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+}
+form > div > input {
+  width: 16rem;
+  height: 1.75rem;
+  padding-left: 10px;
+  border-radius: 10px;
+  color: #a5a5a1;
 }
