foram feitas as estilizações do inicio.html e melhorado o formario (tenho que trocar para formulário).

--- a/assets/css/login/login-background.css
+++ b/assets/css/login/login-background.css
@@ -1,5 +1,5 @@
 .login__background {
-  margin: 0 auto 0 auto;
+  margin: 0 auto 5rem auto;
   width: 347px;
   height: 425px;
   border-radius: 20px;
