--- a/assets/css/formulario/formulario-container.css
+++ b/assets/css/formulario/formulario-container.css
@@ -6,7 +6,7 @@
 }
 
 .cadastro__container {
-  margin: 0 auto 0 auto;
+  margin: 0 auto 2.5rem auto;
   width: 347px;
   height: 425px;
   border-radius: 20px;
