--- a/assets/css/inicio/trabalhos.css
+++ b/assets/css/inicio/trabalhos.css
@@ -1,17 +1,77 @@
 .trabalhos {
+  max-width: 1024px;
+  margin: 0 auto 0 auto;
+}
+.trabalho__item {
+  background-color: #D9D9D9;
+}
+
+.trabalhos__container {
+  width: 264px;
+  margin: 0 auto 0 auto;
+  display: grid;
+  grid-template-columns: 264px;
+  grid-template-rows: 158px 30px 158px 30px 158px 30px;
+}
+.trabalho__texto {
   width: 265px;
-  margin: 1rem auto 0 auto;
+  margin: 4px auto 0 auto;
+  font-size: 12px;
+  text-align: left;
 }
 @media screen and (min-width: 768px) {
+
   .trabalhos {
-    width: 600px;
-    margin: 6rem auto 0 auto;
+    width: 582px;
+    margin: 80px auto 0 auto;
   }
   .trabalhos__container {
+    width: 582px;
     display: grid;
-    grid-template-columns: 100px 100px;
-    grid-template-rows: 20px 20px;
+    grid-template-columns: 285px 285px;
+    grid-template-rows: 289.5px 20px 289.5px 20px;
+    gap: 15px;
+    margin: 0 auto  0 auto;
+   
   }
+  .trabalho__principal {
+    grid-column-start: 1;
+    grid-column-end:2;
+    grid-row-start:1;
+    grid-row-end: 5;
+
+  }
+  .trabalho__principal__foto__1 {
+    grid-column-start: 1;
+    grid-column-end:1;
+    grid-row-start:5;
+    grid-row-end:5;
+  }
+  .trabalho__secundario__um {
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .trabalho__principal__foto__2{
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .trabalho__secundario__dois {
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 5;
+  }
+  .trabalho__principal__foto__3{
+    grid-column-start:2;
+    grid-row-end:2;
+    grid-row-start: 5;
+    grid-row-end: 5;
+  }
+ 
 }
 .trabalhos > h2 {
   margin-bottom: 1.2rem;
@@ -23,8 +83,6 @@
   margin: 0 auto;
 }
 .item__foto {
-  width: 265px;
-  height: 158px;
   background-color: #d9d9d9;
 }
 .trabalhos__primeiraFoto > h3 {
