--- a/assets/css/rodape/rodape.css
+++ b/assets/css/rodape/rodape.css
@@ -4,10 +4,11 @@
   background: #d9d9d9;
 }
 .rodaPe__container {
+  max-width: 1200px;
   display: flex;
   justify-content: space-between;
-  margin: 8.75rem 1rem 0 1rem;
-  padding-top: 2.4375rem;
+  margin: 0 auto 0 auto;
+  padding: 2.4375rem .9375rem 0 .9375rem;
   align-items: center;
 }
 .rodaPe__icones__item {
